# crypto-market-dashboard-pipeline

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MANUAL.md  Makefile  README.md  SKILL.md  crypto.db  pyproject.toml
.claude/skills/draft-insight/: SKILL.md
.claude/skills/profile-data/: SKILL.md
.claude/skills/write-sql/: SKILL.md
data/: README.md
data/processed/: crypto.db
docs/: README.md
notebooks/: 00_eda_template.ipynb  README.md
queries/: README.md
reports/: README.md  REPORT.md
scripts/: README.md  dashboard.py  extract.py  load.py  log.py  main.py  paths.py  scheduler.py  snapshot.py  transform.py
visuals/: README.md
