[project]
name = "daf-project"
version = "0.1.0"
description = "Data Analysis Framework project"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.2",
    "plotly>=6.7.0",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "schedule>=1.2.2",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    
]
